src/test/incremental/const-generics/hash-tyvid-regression-2.stderr
error[E0277]: can't compare `[B; _]` with `&&[A]`
  --> $DIR/hash-tyvid-regression-2.rs:12:16
   |
LL |         self.0 == other
   |                ^^ no implementation for `[B; _] == &&[A]`
   |
   = help: the trait `PartialEq<&&[A]>` is not implemented for `[B; _]`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
